Modificate ore Sprint 8,9,10

--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -233,6 +233,10 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 	\mbox{}\\
 \end{center}
 
+
+
+
+
 \subsubsection{Sprint 3}
 \textbf{Data di inizio:} 09/05/2023\newline
 \textbf{Data di fine:} 16/05/2023\newline
@@ -452,7 +456,7 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 		Verificatore    & 15                            & 31(+4)       & 60                      \\
 		\hline
 		\hline
-		\textbf{Totale} &                               & 177          & 3945                   \\
+		\textbf{Totale} &                               & 180         & 3945                   \\
 		\hline
 	\end{tabularx}\\[8pt]
 	\mbox{}\\
@@ -460,7 +464,7 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 
 \subsubsection{Sprint 8}
 \textbf{Data di inizio:} 19/06/2023\newline
-\textbf{Data di fine:} 21/07/2023\newline
+\textbf{Data di fine:} 03/07/2023\newline
 \newline
 \textbf{Suddivisione del lavoro:}
 \begin{itemize}
@@ -487,20 +491,20 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 		\hline
 		\textbf{Ruolo}  & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)} \\
 		\hline
-		Responsabile    & 30                            & 32(+3)       & 90                      \\
+		Responsabile    & 30                            & 31(+1)       & 30                     \\
 		\hline
-		Amministratore  & 20                            & 32(+6)       & 120                      \\
+		Amministratore  & 20                            & 28(+2)       & 40                      \\
 		\hline
-		Analista        & 25                            & 62(+5)       & 125                       \\
+		Analista        & 25                            & 59(+2)       & 50                       \\
 		\hline
-		Progettista     & 25                            & 31(+20)       & 500                      \\
+		Progettista     & 25                            & 18(+7)       & 175                      \\
 		\hline
-		Programmatore   & 15                            & 56(+30)       & 450                      \\
+		Programmatore   & 15                            & 36(+10)       & 150                      \\
 		\hline
-		Verificatore    & 15                            & 46(+15)       & 225                      \\
+		Verificatore    & 15                            & 36(+5)       & 75                      \\
 		\hline
 		\hline
-		\textbf{Totale} &                               & 259          & 5455                    \\
+		\textbf{Totale} &                               & 208          & 4465                   \\
 		\hline
 	\end{tabularx}\\[8pt]
 	\mbox{}\\
@@ -525,25 +529,33 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 \end{itemize}
 \includegraphics[scale=0.176]{RTB_8.png}\newline
 \newline
-\begin{tabular}{|c|c|c|c|c|c|c|c|}
-    \hline
-    \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
-    \hline
-    Erica & & 1 & & & & & 14.5(+1)\\
-    \hline
-    Francesco & & & & & 2 & & 13.5(+2)\\
-    \hline
-    Lorenzo & & & & & 2 & & 13(+2)\\
-    \hline
-    Matteo & & & & 1.5 & & & 17.5(+1.5)\\
-    \hline
-    Nicolas & 1 & & & & & & 18(+1)\\
-    \hline
-    Romina & & & 1 & & & & 13(+1)\\
-    \hline
-    \textbf{Totale} & 14(+1) & 17(+1) & 25(+1) & 5.5(+1.5) & 18(+4) & 12(+0) & 89.5(+8.5)\\
-    \hline
-\end{tabular}\\[8pt]
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|}
+		\hline
+		\multicolumn{4}{|c|}{\textbf{Preventivo ore/costi}}                                      \\
+		\hline
+		\hline
+		\textbf{Ruolo}  & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)} \\
+		\hline
+		Responsabile    & 30                            & 32(+1)       & 30                      \\
+		\hline
+		Amministratore  & 20                            & 30(+2)       & 40                      \\
+		\hline
+		Analista        & 25                            & 61(+2)       & 50                       \\
+		\hline
+		Progettista     & 25                            & 25(+7)       & 175                      \\
+		\hline
+		Programmatore   & 15                            & 46(+10)       & 150                      \\
+		\hline
+		Verificatore    & 15                            & 41(+5)       & 75                      \\
+		\hline
+		\hline
+		\textbf{Totale} &                               & 235          & 4985                    \\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
+
 
 \subsubsection{Sprint 10}
 \textbf{Data di inizio:} 12/07/2023\newline
@@ -565,25 +577,32 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 \end{itemize}
 \includegraphics[scale=0.178]{RTB_9.png}\newline
 \newline
-\begin{tabular}{|c|c|c|c|c|c|c|c|}
-    \hline
-    \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
-    \hline
-    Erica & & & & & & 1 & 14.5(+1)\\
-    \hline
-    Francesco & & & & & 1 & & 12.5(+1)\\
-    \hline
-    Lorenzo & & & & 3 & & & 14(+3)\\
-    \hline
-    Matteo & 1 & & & & & & 17(+1)\\
-    \hline
-    Nicolas & & 1 & & & & & 18(+1)\\
-    \hline
-    Romina & & & & & 2 & & 14(+2)\\
-    \hline
-    \textbf{Totale} & 14(+1) & 17(+1) & 24(+0) & 7(+3) & 17(+3) & 13(+1) & 98.5(+9)\\
-    \hline
-\end{tabular}\\[8pt]
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|}
+		\hline
+		\multicolumn{4}{|c|}{\textbf{Preventivo ore/costi}}                                      \\
+		\hline
+		\hline
+		\textbf{Ruolo}  & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)} \\
+		\hline
+		Responsabile    & 30                            & 33(+1)       & 30                     \\
+		\hline
+		Amministratore  & 20                            & 32(+2)       & 40                      \\
+		\hline
+		Analista        & 25                            & 62(+1)       & 25                       \\
+		\hline
+		Progettista     & 25                            & 31(+6)       & 150                      \\
+		\hline
+		Programmatore   & 15                            & 56(+10)       & 150                      \\
+		\hline
+		Verificatore    & 15                            & 46(+5)       & 75                      \\
+		\hline
+		\hline
+		\textbf{Totale} &                               & 260          & 5455                    \\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
 
 \newpage
 
