--- a/docs/esterni/presentazioneRTB/lettera_presentazione_RTB.tex
+++ b/docs/esterni/presentazioneRTB/lettera_presentazione_RTB.tex
@@ -26,11 +26,14 @@ con la presente, il gruppo 4ourSquared desidera candidarsi in via ufficiale per 
 Accedendo a questo \href{https://github.com/4ourSquared/LumosMinima/tree/main/public}{link} (che effettuerà un \textit{redirect} su \href{https://github.com/}{GitHub}), saranno visionabili i seguenti nuovi documenti:
 \paragraph{Documenti Esterni}
 \begin{itemize}
-    \item A
+    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public}{link}
+    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public}{link}
+    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public}{link}
+    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public}{link}
 \end{itemize}
 \paragraph{Documenti Interni}
 \begin{itemize}
-    \item B
+    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public}{link}
 \end{itemize}
 
 Come precedentemente riferito in fase di candidatura, tutti i documenti pubblici sono collocati nella cartella \textit{public}, dalla quale chiediamo cortesemente di non uscire.
