Aggiunta tabella preventivo ore per membro

--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -185,7 +185,35 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 	\mbox{}\\
 \end{center}
 
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|X|X|X|}
+		\hline
+		\multicolumn{7}{|c|}{\textbf{Preventivo ore per membro}}                                      \\
+		\hline
+		\hline
+		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
+		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
+		\hline
+		Alberti Nicolas    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		\hline
+		Brotto Romina    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		\hline
+		Cavaliere Erica    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		\hline
+		Ceccato Francesco    	& 30 	& 6(+6)       & 180  & &   &                \\
+		\hline
+		Salami Lorenzo    	& 30 	& 6(+6)       & 180  & &     &               \\
+		\hline
+		Soldà Matteo    	& 30 	& 6(+6)       & 180  & &   &                 \\
+		\hline
+		\hline
+		\textbf{Totale} &    & & & 24           & 580      &               \\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
 
+\newpage
 
 \subsubsection{Sprint 2}
 \textbf{Data di inizio:} 28/04/2023\newline
@@ -234,7 +262,35 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 \end{center}
 
 
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|X|X|X|}
+		\hline
+		\multicolumn{7}{|c|}{\textbf{Preventivo ore per membro}}                                      \\
+		\hline
+		\hline
+		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
+		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
+		\hline
+		Alberti Nicolas    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		\hline
+		Brotto Romina    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		\hline
+		Cavaliere Erica    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		\hline
+		Ceccato Francesco    	& 30 	& 6(+6)       & 180  & &   &                \\
+		\hline
+		Salami Lorenzo    	& 30 	& 6(+6)       & 180  & &     &               \\
+		\hline
+		Soldà Matteo    	& 30 	& 6(+6)       & 180  & &   &                 \\
+		\hline
+		\hline
+		\textbf{Totale} &    & & & 24           & 580      &               \\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
 
+\newpage
 
 
 \subsubsection{Sprint 3}
@@ -283,6 +339,36 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 	\mbox{}\\
 \end{center}
 
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|X|X|X|}
+		\hline
+		\multicolumn{7}{|c|}{\textbf{Preventivo ore per membro}}                                      \\
+		\hline
+		\hline
+		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
+		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
+		\hline
+		Alberti Nicolas    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		\hline
+		Brotto Romina    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		\hline
+		Cavaliere Erica    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		\hline
+		Ceccato Francesco    	& 30 	& 6(+6)       & 180  & &   &                \\
+		\hline
+		Salami Lorenzo    	& 30 	& 6(+6)       & 180  & &     &               \\
+		\hline
+		Soldà Matteo    	& 30 	& 6(+6)       & 180  & &   &                 \\
+		\hline
+		\hline
+		\textbf{Totale} &    & & & 24           & 580      &               \\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
+
+\newpage
+
 \subsubsection{Sprint 4}
 \textbf{Data di inizio:} 17/05/2023\newline
 \textbf{Data di fine:} 25/05/2023\newline
@@ -330,6 +416,36 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 	\mbox{}\\
 \end{center}
 
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|X|X|X|}
+		\hline
+		\multicolumn{7}{|c|}{\textbf{Preventivo ore per membro}}                                      \\
+		\hline
+		\hline
+		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
+		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
+		\hline
+		Alberti Nicolas    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		\hline
+		Brotto Romina    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		\hline
+		Cavaliere Erica    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		\hline
+		Ceccato Francesco    	& 30 	& 6(+6)       & 180  & &   &                \\
+		\hline
+		Salami Lorenzo    	& 30 	& 6(+6)       & 180  & &     &               \\
+		\hline
+		Soldà Matteo    	& 30 	& 6(+6)       & 180  & &   &                 \\
+		\hline
+		\hline
+		\textbf{Totale} &    & & & 24           & 580      &               \\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
+
+\newpage
+
 \subsubsection{Sprint 5}
 \textbf{Data di inizio:} 26/05/2023\newline
 \textbf{Data di fine:} 02/06/2023\newline
@@ -375,6 +491,36 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 	\mbox{}\\
 \end{center}
 
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|X|X|X|}
+		\hline
+		\multicolumn{7}{|c|}{\textbf{Preventivo ore per membro}}                                      \\
+		\hline
+		\hline
+		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
+		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
+		\hline
+		Alberti Nicolas    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		\hline
+		Brotto Romina    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		\hline
+		Cavaliere Erica    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		\hline
+		Ceccato Francesco    	& 30 	& 6(+6)       & 180  & &   &                \\
+		\hline
+		Salami Lorenzo    	& 30 	& 6(+6)       & 180  & &     &               \\
+		\hline
+		Soldà Matteo    	& 30 	& 6(+6)       & 180  & &   &                 \\
+		\hline
+		\hline
+		\textbf{Totale} &    & & & 24           & 580      &               \\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
+
+\newpage
+
 \subsubsection{Sprint 6}
 \textbf{Data di inizio:} 03/06/2023\newline
 \textbf{Data di fine:} 12/06/2023\newline
@@ -419,6 +565,36 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 	\mbox{}\\
 \end{center}
 
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|X|X|X|}
+		\hline
+		\multicolumn{7}{|c|}{\textbf{Preventivo ore per membro}}                                      \\
+		\hline
+		\hline
+		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
+		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
+		\hline
+		Alberti Nicolas    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		\hline
+		Brotto Romina    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		\hline
+		Cavaliere Erica    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		\hline
+		Ceccato Francesco    	& 30 	& 6(+6)       & 180  & &   &                \\
+		\hline
+		Salami Lorenzo    	& 30 	& 6(+6)       & 180  & &     &               \\
+		\hline
+		Soldà Matteo    	& 30 	& 6(+6)       & 180  & &   &                 \\
+		\hline
+		\hline
+		\textbf{Totale} &    & & & 24           & 580      &               \\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
+
+\newpage
+
 \subsubsection{Sprint 7}
 \textbf{Data di inizio:} 13/06/2023\newline
 \textbf{Data di fine:} 19/06/2023\newline
@@ -461,6 +637,36 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 	\end{tabularx}\\[8pt]
 	\mbox{}\\
 \end{center}
+
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|X|X|X|}
+		\hline
+		\multicolumn{7}{|c|}{\textbf{Preventivo ore per membro}}                                      \\
+		\hline
+		\hline
+		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
+		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
+		\hline
+		Alberti Nicolas    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		\hline
+		Brotto Romina    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		\hline
+		Cavaliere Erica    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		\hline
+		Ceccato Francesco    	& 30 	& 6(+6)       & 180  & &   &                \\
+		\hline
+		Salami Lorenzo    	& 30 	& 6(+6)       & 180  & &     &               \\
+		\hline
+		Soldà Matteo    	& 30 	& 6(+6)       & 180  & &   &                 \\
+		\hline
+		\hline
+		\textbf{Totale} &    & & & 24           & 580      &               \\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
+
+\newpage
 
 \subsubsection{Sprint 8}
 \textbf{Data di inizio:} 19/06/2023\newline
@@ -510,6 +716,36 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 	\mbox{}\\
 \end{center}
 
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|X|X|X|}
+		\hline
+		\multicolumn{7}{|c|}{\textbf{Preventivo ore per membro}}                                      \\
+		\hline
+		\hline
+		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
+		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
+		\hline
+		Alberti Nicolas    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		\hline
+		Brotto Romina    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		\hline
+		Cavaliere Erica    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		\hline
+		Ceccato Francesco    	& 30 	& 6(+6)       & 180  & &   &                \\
+		\hline
+		Salami Lorenzo    	& 30 	& 6(+6)       & 180  & &     &               \\
+		\hline
+		Soldà Matteo    	& 30 	& 6(+6)       & 180  & &   &                 \\
+		\hline
+		\hline
+		\textbf{Totale} &    & & & 24           & 580      &               \\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
+
+\newpage
+
 \subsubsection{Sprint 9}
 \textbf{Data di inizio:} 04/07/2023\newline
 \textbf{Data di fine:} 11/07/2023\newline
@@ -556,6 +792,35 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 	\mbox{}\\
 \end{center}
 
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|X|X|X|}
+		\hline
+		\multicolumn{7}{|c|}{\textbf{Preventivo ore per membro}}                                      \\
+		\hline
+		\hline
+		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
+		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
+		\hline
+		Alberti Nicolas    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		\hline
+		Brotto Romina    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		\hline
+		Cavaliere Erica    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		\hline
+		Ceccato Francesco    	& 30 	& 6(+6)       & 180  & &   &                \\
+		\hline
+		Salami Lorenzo    	& 30 	& 6(+6)       & 180  & &     &               \\
+		\hline
+		Soldà Matteo    	& 30 	& 6(+6)       & 180  & &   &                 \\
+		\hline
+		\hline
+		\textbf{Totale} &    & & & 24           & 580      &               \\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
+
+\newpage
 
 \subsubsection{Sprint 10}
 \textbf{Data di inizio:} 12/07/2023\newline
@@ -599,6 +864,34 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 		\hline
 		\hline
 		\textbf{Totale} &                               & 259          & 5455                    \\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
+
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|X|X|X|}
+		\hline
+		\multicolumn{7}{|c|}{\textbf{Preventivo ore per membro}}                                      \\
+		\hline
+		\hline
+		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
+		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
+		\hline
+		Alberti Nicolas    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		\hline
+		Brotto Romina    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		\hline
+		Cavaliere Erica    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		\hline
+		Ceccato Francesco    	& 30 	& 6(+6)       & 180  & &   &                \\
+		\hline
+		Salami Lorenzo    	& 30 	& 6(+6)       & 180  & &     &               \\
+		\hline
+		Soldà Matteo    	& 30 	& 6(+6)       & 180  & &   &                 \\
+		\hline
+		\hline
+		\textbf{Totale} &    & & & 24           & 580      &               \\
 		\hline
 	\end{tabularx}\\[8pt]
 	\mbox{}\\
