Fix newpage Scrum

--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -139,6 +139,8 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
     \includegraphics[scale=0.24]{RTB_9.png}\newline
 \end{itemize}
 
+\newpage
+
 \subsection{Scrum}\label{Scrum}
 
 \subsubsection{Sprint 1}
