--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -29,7 +29,7 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 \addversione{0.0.9}{21/07/2023}{Soldà Matteo}{Cavaliere Erica}{Completamento sprint 8}
 \addversione{0.0.10}{21/07/2023}{Soldà Matteo}{Alberti Nicolas}{Aggiunta di specifiche relative ai rischi}
 \addversione{0.1.0}{24/07/2023}{Brotto Romina}{Soldà Matteo}{Verifica documento per RTB}
-\addversione{1.0.0}{24/07/2023}{Soldà Matteo}{Brotto Romina}{Approvazione documento per RTB}
+\addversione{1.0.0}{xx/07/2023}{Soldà Matteo}{Brotto Romina}{Approvazione documento per RTB}
 
 \def\pgfcalendarmonthitname#1{%
 \ifcase#1 \or Gennaio\or Febbraio\or Marzo\or Aprile\or Maggio\or Giugno\or Luglio\or Agosto\or Settembre\or Ottobre\or Novembre\or Dicembre\fi%
@@ -196,20 +196,20 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
 		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
 		\hline
-		Alberti Nicolas    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		Alberti Nicolas    	&0 	&2(+2)	&0	&0	&0	&0	\\
 		\hline
-		Brotto Romina    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		Brotto Romina    	&0 	&0	&0	&0	&0	&3(+3)	\\
 		\hline
-		Cavaliere Erica    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		Cavaliere Erica    	&0 	&0  &5(+5)  &0 &0 &0	\\
 		\hline
-		Ceccato Francesco    	& 30 	& 6(+6)       & 180  & &   &                \\
+		Ceccato Francesco   &0 	&2(+2)  &0  &0 &0 &0	\\
 		\hline
-		Salami Lorenzo    	& 30 	& 6(+6)       & 180  & &     &               \\
+		Salami Lorenzo    	&0 	&0  & 6(+6) &0 &0 &0	\\
 		\hline
-		Soldà Matteo    	& 30 	& 6(+6)       & 180  & &   &                 \\
+		Soldà Matteo    	&6(+6)	&0  &0  &0 &0 &0	\\
 		\hline
 		\hline
-		\textbf{Totale} &    & & & 24           & 580      &               \\
+		\textbf{Totale} 	& 6(+6) & 4(+4) & 11(+11) & 0 & 0 & 3(+3)	\\
 		\hline
 	\end{tabularx}\\[8pt]
 	\mbox{}\\
@@ -273,27 +273,26 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
 		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
 		\hline
-		Alberti Nicolas    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		Alberti Nicolas    	&6(+6) 	&2	&0	&0	&0	&0	\\
 		\hline
-		Brotto Romina    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		Brotto Romina    	&0 	&3(+3)	&0	&0	&0	&3	\\
 		\hline
-		Cavaliere Erica    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		Cavaliere Erica    	&0 	&0  &10(+5)  &0 &0 &0	\\
 		\hline
-		Ceccato Francesco    	& 30 	& 6(+6)       & 180  & &   &                \\
+		Ceccato Francesco   &0 	&0  &5(+5)  &0 &0 &0	\\
 		\hline
-		Salami Lorenzo    	& 30 	& 6(+6)       & 180  & &     &               \\
+		Salami Lorenzo    	&0 	&0  &6 &0 &0 &5(+5)	\\
 		\hline
-		Soldà Matteo    	& 30 	& 6(+6)       & 180  & &   &                 \\
+		Soldà Matteo    	&6	&2  &0  &0 &0 &0	\\
 		\hline
 		\hline
-		\textbf{Totale} &    & & & 24           & 580      &               \\
+		\textbf{Totale} 	& 12(+6) & 9(+5) & 21(+10) & 0 & 0 & 8(+5)	\\
 		\hline
 	\end{tabularx}\\[8pt]
 	\mbox{}\\
 \end{center}
 
 \newpage
-
 
 \subsubsection{Sprint 3}
 \textbf{Data di inizio:} 09/05/2023\newline
@@ -350,20 +349,20 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
 		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
 		\hline
-		Alberti Nicolas    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		Alberti Nicolas    	&6 	&2	&0	&0	&0	&4(+4)	\\
 		\hline
-		Brotto Romina    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		Brotto Romina    	&0 	&3	&7(+7)	&0	&0	&3	\\
 		\hline
-		Cavaliere Erica    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		Cavaliere Erica    	&0 	&4(+4)  &10  &0 &0 &0	\\
 		\hline
-		Ceccato Francesco    	& 30 	& 6(+6)       & 180  & &   &                \\
+		Ceccato Francesco   &0 	&0  &12(+7)  &0 &0 &0	\\
 		\hline
-		Salami Lorenzo    	& 30 	& 6(+6)       & 180  & &     &               \\
+		Salami Lorenzo    	&0 	&4(+4)  &6 &0 &0 &5	\\
 		\hline
-		Soldà Matteo    	& 30 	& 6(+6)       & 180  & &   &                 \\
+		Soldà Matteo    	&12(+6)	&2  &0  &0 &0 &0	\\
 		\hline
 		\hline
-		\textbf{Totale} &    & & & 24           & 580      &               \\
+		\textbf{Totale} 	& 18(+6) & 17(+8) & 35(+14) & 0 & 0 & 12(+4)	\\
 		\hline
 	\end{tabularx}\\[8pt]
 	\mbox{}\\
@@ -427,20 +426,20 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
 		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
 		\hline
-		Alberti Nicolas    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		Alberti Nicolas    	&6 	&2	&7	&0	&0	&4	\\
 		\hline
-		Brotto Romina    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		Brotto Romina    	&3(+3) 	&3	&7	&0	&0	&3	\\
 		\hline
-		Cavaliere Erica    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		Cavaliere Erica    	&0 	&6(+2)  &10  &0 &0 &0	\\
 		\hline
-		Ceccato Francesco    	& 30 	& 6(+6)       & 180  & &   &                \\
+		Ceccato Francesco   &0 	&0  &12  &0 &0 &5(+5)	\\
 		\hline
-		Salami Lorenzo    	& 30 	& 6(+6)       & 180  & &     &               \\
+		Salami Lorenzo    	&0 	&6(+2)  &6 &0 &0 &5	\\
 		\hline
-		Soldà Matteo    	& 30 	& 6(+6)       & 180  & &   &                 \\
+		Soldà Matteo    	&12	&2  &8(+8)  &0 &0 &0	\\
 		\hline
 		\hline
-		\textbf{Totale} &    & & & 24           & 580      &               \\
+		\textbf{Totale} 	& 21(+3) & 21(+4) & 50(+15) & 0 & 0 & 17(+5)	\\
 		\hline
 	\end{tabularx}\\[8pt]
 	\mbox{}\\
@@ -502,20 +501,20 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
 		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
 		\hline
-		Alberti Nicolas    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		Alberti Nicolas    	&6 	&4(+2)	&7	&0	&0	&4	\\
 		\hline
-		Brotto Romina    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		Brotto Romina    	&3 	&3	&12(+5)	&0	&0	&3	\\
 		\hline
-		Cavaliere Erica    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		Cavaliere Erica    	&3(+3) 	&6  &10  &0 &0 &0	\\
 		\hline
-		Ceccato Francesco    	& 30 	& 6(+6)       & 180  & &   &                \\
+		Ceccato Francesco   &0 	&0  &12  &2(+2) &0 &5	\\
 		\hline
-		Salami Lorenzo    	& 30 	& 6(+6)       & 180  & &     &               \\
+		Salami Lorenzo    	&0 	&6  &6 &0 &0 &11(+6)	\\
 		\hline
-		Soldà Matteo    	& 30 	& 6(+6)       & 180  & &   &                 \\
+		Soldà Matteo    	&12	&2  &8 &0 &1(+1) &0	\\
 		\hline
 		\hline
-		\textbf{Totale} &    & & & 24           & 580      &               \\
+		\textbf{Totale} 	&24(+3) &23(+2) &55(+5) &2(+2) &1(+1) &23(+6)	\\
 		\hline
 	\end{tabularx}\\[8pt]
 	\mbox{}\\
@@ -576,20 +575,20 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
 		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
 		\hline
-		Alberti Nicolas    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		Alberti Nicolas    	&6 	&4	&7	&0	&8(+8)	&4	\\
 		\hline
-		Brotto Romina    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		Brotto Romina    	&3 	&4(+1)	&12	&0	&0	&3	\\
 		\hline
-		Cavaliere Erica    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		Cavaliere Erica    	&5 	&6  &10  &0 &0 &4(+4)	\\
 		\hline
-		Ceccato Francesco    	& 30 	& 6(+6)       & 180  & &   &                \\
+		Ceccato Francesco   &0 	&0  &12  &7(+5) &0 &5	\\
 		\hline
-		Salami Lorenzo    	& 30 	& 6(+6)       & 180  & &     &               \\
+		Salami Lorenzo    	&0 	&6  &7(+1) &0 &0 &11	\\
 		\hline
-		Soldà Matteo    	& 30 	& 6(+6)       & 180  & &   &                 \\
+		Soldà Matteo    	&12	&2  &8 &0 &8(+7) &0	\\
 		\hline
 		\hline
-		\textbf{Totale} &    & & & 24           & 580      &               \\
+		\textbf{Totale} 	&26(+2) &24(+1) &56(+1) &7(+5) &16(+15) &27(+4)	\\
 		\hline
 	\end{tabularx}\\[8pt]
 	\mbox{}\\
@@ -649,26 +648,27 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
 		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
 		\hline
-		Alberti Nicolas    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		Alberti Nicolas    	&6 	&4	&7	&4(+4)	&8	&4	\\
 		\hline
-		Brotto Romina    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		Brotto Romina    	&3 	&6(+2)	&12	&0	&0	&3	\\
 		\hline
-		Cavaliere Erica    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		Cavaliere Erica    	&5 	&6  &10  &0 &10(+10) &4	\\
 		\hline
-		Ceccato Francesco    	& 30 	& 6(+6)       & 180  & &   &                \\
+		Ceccato Francesco   &0 	&0  &12  &7 &0 &9(+4)	\\
 		\hline
-		Salami Lorenzo    	& 30 	& 6(+6)       & 180  & &     &               \\
+		Salami Lorenzo    	&3(+3) 	&6  &7 &0 &0 &11	\\
 		\hline
-		Soldà Matteo    	& 30 	& 6(+6)       & 180  & &   &                 \\
+		Soldà Matteo    	&12	&2  &9(+1) &0 &8(+7) &0	\\
 		\hline
 		\hline
-		\textbf{Totale} &    & & & 24           & 580      &               \\
+		\textbf{Totale} 	&29(+3) &26(+2) &57(+1) &11(+4) &26(+10) &31(+4)	\\
 		\hline
 	\end{tabularx}\\[8pt]
 	\mbox{}\\
 \end{center}
 
 \newpage
+
 
 \subsubsection{Sprint 8}
 \textbf{Data di inizio:} 19/06/2023\newline
@@ -727,20 +727,20 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
 		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
 		\hline
-		Alberti Nicolas    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		Alberti Nicolas    	&6 	&4	&7	&4	&18(+10) &4	\\
 		\hline
-		Brotto Romina    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		Brotto Romina    	&3 	&8(+2)	&12	&0	&0	&3	\\
 		\hline
-		Cavaliere Erica    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		Cavaliere Erica    	&5 	&6  &10  &7(+7) &10 &4	\\
 		\hline
-		Ceccato Francesco    	& 30 	& 6(+6)       & 180  & &   &                \\
+		Ceccato Francesco   &0 	&0  &14(+2) &7 &0 &9	\\
 		\hline
-		Salami Lorenzo    	& 30 	& 6(+6)       & 180  & &     &               \\
+		Salami Lorenzo    	&4(+1) 	&6  &7 &0 &0 &11	\\
 		\hline
-		Soldà Matteo    	& 30 	& 6(+6)       & 180  & &   &                 \\
+		Soldà Matteo    	&12	&2  &9 &0 &8 &5(+5)	\\
 		\hline
 		\hline
-		\textbf{Totale} &    & & & 24           & 580      &               \\
+		\textbf{Totale} 	&30(+1) &28(+2) &59(+2) &18(+7) &36(+10) &36(+5)	\\
 		\hline
 	\end{tabularx}\\[8pt]
 	\mbox{}\\
@@ -803,20 +803,20 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
 		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
 		\hline
-		Alberti Nicolas    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		Alberti Nicolas    	&6 	&4	&9(+2)	&4	&18 &4	\\
 		\hline
-		Brotto Romina    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		Brotto Romina    	&3 	&8	&12	&0	&0	&8(+5)	\\
 		\hline
-		Cavaliere Erica    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		Cavaliere Erica    	&5 	&8(+2)  &10  &7 &10 &4	\\
 		\hline
-		Ceccato Francesco    	& 30 	& 6(+6)       & 180  & &   &                \\
+		Ceccato Francesco   &1(+1) 	&0  &14 &7 &0 &9	\\
 		\hline
-		Salami Lorenzo    	& 30 	& 6(+6)       & 180  & &     &               \\
+		Salami Lorenzo    	&4 	&6  &7 &0 &10(+10) &11	\\
 		\hline
-		Soldà Matteo    	& 30 	& 6(+6)       & 180  & &   &                 \\
+		Soldà Matteo    	&12	&2  &9 &7(+7) &8 &5	\\
 		\hline
 		\hline
-		\textbf{Totale} &    & & & 24           & 580      &               \\
+		\textbf{Totale} 	&31(+1) &30(+2) &61(+2) &25(+7) &46(+10) &41(+5)	\\
 		\hline
 	\end{tabularx}\\[8pt]
 	\mbox{}\\
@@ -880,20 +880,20 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
 		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
 		\hline
-		Alberti Nicolas    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		Alberti Nicolas    	&6 	&4	&10(+1)	&4	&18 &4	\\
 		\hline
-		Brotto Romina    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		Brotto Romina    	&3 	&8	&12	&0	&10(+10) &8	\\
 		\hline
-		Cavaliere Erica    	& 30 	& 6(+6)       & 180  & &  &                 \\
+		Cavaliere Erica    	&5 	&8  &10  &7 &10 &9(+5)	\\
 		\hline
-		Ceccato Francesco    	& 30 	& 6(+6)       & 180  & &   &                \\
+		Ceccato Francesco   &1 	&2(+2)  &14 &7 &0 &9	\\
 		\hline
-		Salami Lorenzo    	& 30 	& 6(+6)       & 180  & &     &               \\
+		Salami Lorenzo    	&4 	&6  &7 &6(+6) &10 &11	\\
 		\hline
-		Soldà Matteo    	& 30 	& 6(+6)       & 180  & &   &                 \\
+		Soldà Matteo    	&13(+1)	&2  &9 &7 &8 &5	\\
 		\hline
 		\hline
-		\textbf{Totale} &    & & & 24           & 580      &               \\
+		\textbf{Totale} 	&32(+1) &32(+2) &62(+1) &31(+6) &56(+10) &46(+5)	\\
 		\hline
 	\end{tabularx}\\[8pt]
 	\mbox{}\\
