--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -283,7 +283,7 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 		\hline
 		Salami Lorenzo    	&0 	&0  &6 &0 &0 &5(+5)	\\
 		\hline
-		Soldà Matteo    	&6	&2  &0  &0 &0 &0	\\
+		Soldà Matteo    	&6	&2(+2)  &0  &0 &0 &0	\\
 		\hline
 		\hline
 		\textbf{Totale} 	& 12(+6) & 9(+5) & 21(+10) & 0 & 0 & 8(+5)	\\
@@ -426,7 +426,7 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
 		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
 		\hline
-		Alberti Nicolas    	&6 	&2	&7	&0	&0	&4	\\
+		Alberti Nicolas    	&6 	&2	&7(+7)	&0	&0	&4	\\
 		\hline
 		Brotto Romina    	&3(+3) 	&3	&7	&0	&0	&3	\\
 		\hline
@@ -575,17 +575,17 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
 		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
 		\hline
-		Alberti Nicolas    	&6 	&4	&7	&0	&8(+8)	&4	\\
+		Alberti Nicolas    	&8(+2) 	&4	&7	&0	&0	&4	\\
 		\hline
 		Brotto Romina    	&3 	&4(+1)	&12	&0	&0	&3	\\
 		\hline
-		Cavaliere Erica    	&5 	&6  &10  &0 &0 &4(+4)	\\
+		Cavaliere Erica    	&3 	&6  &10  &0 &0 &4(+4)	\\
 		\hline
 		Ceccato Francesco   &0 	&0  &12  &7(+5) &0 &5	\\
 		\hline
 		Salami Lorenzo    	&0 	&6  &7(+1) &0 &0 &11	\\
 		\hline
-		Soldà Matteo    	&12	&2  &8 &0 &8(+7) &0	\\
+		Soldà Matteo    	&12	&2  &8 &0 &16(+15) &0	\\
 		\hline
 		\hline
 		\textbf{Totale} 	&26(+2) &24(+1) &56(+1) &7(+5) &16(+15) &27(+4)	\\
@@ -648,17 +648,17 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
 		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
 		\hline
-		Alberti Nicolas    	&6 	&4	&7	&4(+4)	&8	&4	\\
+		Alberti Nicolas    	&8 	&4	&7	&4(+4)	&0	&4	\\
 		\hline
 		Brotto Romina    	&3 	&6(+2)	&12	&0	&0	&3	\\
 		\hline
-		Cavaliere Erica    	&5 	&6  &10  &0 &10(+10) &4	\\
+		Cavaliere Erica    	&3 	&6  &10  &0 &10(+10) &4	\\
 		\hline
 		Ceccato Francesco   &0 	&0  &12  &7 &0 &9(+4)	\\
 		\hline
 		Salami Lorenzo    	&3(+3) 	&6  &7 &0 &0 &11	\\
 		\hline
-		Soldà Matteo    	&12	&2  &9(+1) &0 &8(+7) &0	\\
+		Soldà Matteo    	&12	&2  &9(+1) &0 &16 &0	\\
 		\hline
 		\hline
 		\textbf{Totale} 	&29(+3) &26(+2) &57(+1) &11(+4) &26(+10) &31(+4)	\\
@@ -727,17 +727,17 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
 		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
 		\hline
-		Alberti Nicolas    	&6 	&4	&7	&4	&18(+10) &4	\\
+		Alberti Nicolas    	&8 	&4	&7	&4	&10(+10) &4	\\
 		\hline
 		Brotto Romina    	&3 	&8(+2)	&12	&0	&0	&3	\\
 		\hline
-		Cavaliere Erica    	&5 	&6  &10  &7(+7) &10 &4	\\
+		Cavaliere Erica    	&3 	&6  &10  &7(+7) &10 &4	\\
 		\hline
 		Ceccato Francesco   &0 	&0  &14(+2) &7 &0 &9	\\
 		\hline
 		Salami Lorenzo    	&4(+1) 	&6  &7 &0 &0 &11	\\
 		\hline
-		Soldà Matteo    	&12	&2  &9 &0 &8 &5(+5)	\\
+		Soldà Matteo    	&12	&2  &9 &0 &16 &5(+5)	\\
 		\hline
 		\hline
 		\textbf{Totale} 	&30(+1) &28(+2) &59(+2) &18(+7) &36(+10) &36(+5)	\\
@@ -803,17 +803,17 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
 		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
 		\hline
-		Alberti Nicolas    	&6 	&4	&9(+2)	&4	&18 &4	\\
+		Alberti Nicolas    	&8 	&4	&9(+2)	&4	&10 &4	\\
 		\hline
 		Brotto Romina    	&3 	&8	&12	&0	&0	&8(+5)	\\
 		\hline
-		Cavaliere Erica    	&5 	&8(+2)  &10  &7 &10 &4	\\
+		Cavaliere Erica    	&3 	&8(+2)  &10  &7 &10 &4	\\
 		\hline
 		Ceccato Francesco   &1(+1) 	&0  &14 &7 &0 &9	\\
 		\hline
 		Salami Lorenzo    	&4 	&6  &7 &0 &10(+10) &11	\\
 		\hline
-		Soldà Matteo    	&12	&2  &9 &7(+7) &8 &5	\\
+		Soldà Matteo    	&12	&2  &9 &7(+7) &16 &5	\\
 		\hline
 		\hline
 		\textbf{Totale} 	&31(+1) &30(+2) &61(+2) &25(+7) &46(+10) &41(+5)	\\
@@ -880,17 +880,17 @@ Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della sol
 		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
 		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
 		\hline
-		Alberti Nicolas    	&6 	&4	&10(+1)	&4	&18 &4	\\
+		Alberti Nicolas    	&8 	&4	&10(+1)	&4	&10 &4	\\
 		\hline
 		Brotto Romina    	&3 	&8	&12	&0	&10(+10) &8	\\
 		\hline
-		Cavaliere Erica    	&5 	&8  &10  &7 &10 &9(+5)	\\
+		Cavaliere Erica    	&3 	&8  &10  &7 &10 &9(+5)	\\
 		\hline
 		Ceccato Francesco   &1 	&2(+2)  &14 &7 &0 &9	\\
 		\hline
 		Salami Lorenzo    	&4 	&6  &7 &6(+6) &10 &11	\\
 		\hline
-		Soldà Matteo    	&13(+1)	&2  &9 &7 &8 &5	\\
+		Soldà Matteo    	&13(+1)	&2  &9 &7 &16 &5	\\
 		\hline
 		\hline
 		\textbf{Totale} 	&32(+1) &32(+2) &62(+1) &31(+6) &56(+10) &46(+5)	\\
