--- a/docs/esterni/presentazioneRTB/lettera_presentazione_RTB.tex
+++ b/docs/esterni/presentazioneRTB/lettera_presentazione_RTB.tex
@@ -26,14 +26,18 @@ con la presente, il gruppo 4ourSquared desidera candidarsi in via ufficiale per 
 Accedendo a questo \href{https://github.com/4ourSquared/LumosMinima/tree/main/public}{link} (che effettuerà un \textit{redirect} su \href{https://github.com/}{GitHub}), saranno visionabili i seguenti nuovi documenti:
 \paragraph{Documenti Esterni}
 \begin{itemize}
-    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public}{link}
-    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public}{link}
-    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public}{link}
-    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public}{link}
+    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/analisi_dei_requisiti.pdf}{Analisi dei Requisiti}
+    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/piano_di_progetto.pdf}{Piano di Progetto} (Aggiornato)
+    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/piano_di_qualifica.pdf}{Piano di Qualifica} (Aggiornato)
+    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/motivazione_scelte.pdf}{Motivazione delle Scelte}
+    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/gloassario.pdf}{Glossario} (Aggiornato)
+    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/verbali/2023_05_17_E.pdf}{Verbale del 17/05/2023 con Imola Informatica}
+    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/esterni/verbali/2023_05_29_E.pdf}{Verbale del 29/05/2023 con Prof. Cardin}
 \end{itemize}
 \paragraph{Documenti Interni}
 \begin{itemize}
-    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public}{link}
+    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/interni/norme_di_progetto.pdf}{Norme di Progetto} (Aggiornato)
+    \item \href{https://github.com/4ourSquared/LumosMinima/tree/main/public/interni/verbali}{16 Verbali Interni}
 \end{itemize}
 
 Come precedentemente riferito in fase di candidatura, tutti i documenti pubblici sono collocati nella cartella \textit{public}, dalla quale chiediamo cortesemente di non uscire.
