--- a/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
+++ b/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
@@ -1,4 +1,5 @@
 \documentclass[a4paper, 12pt]{article}
+\usepackage{graphicx} % Required for inserting images
 \usepackage{amsmath}
 \usepackage{pgfplots}
 \usepackage{tabularx}
@@ -8,9 +9,10 @@
 \input{\templates/style}
 \input{\templates/front_page}
 \input{\templates/history}
+\graphicspath{ {./immagini/} }
 
 \settitolo{Piano di Qualifica}
-\setredattori{Lorenzo Salami}
+\setredattori{Brotto Romina\\ Salami Lorenzo \\ Soldà Matteo}
 \setdestuso{esterno}
 \setdescrizione{
 Questo documento serve a definire le metriche e i criteri di accettazione dei prodotti.
@@ -19,7 +21,9 @@ Questo documento serve a definire le metriche e i criteri di accettazione dei pr
 
 \addversione{0.0.0}{18/04/2023}{Salami Lorenzo}{Soldà Matteo}{Stesura iniziale.}
 \addversione{0.0.1}{24/04/2023}{Soldà Matteo}{Salami Lorenzo}{Aggiunta delle intestazioni e dei piè di pagina}
-
+\addversione{0.0.2}{24/07/2023}{Brotto Romina}{Ceccato Francesco}{Aggiunta sezione 3 ed indici}
+\addversione{0.1.0}{25/07/2023}{Brotto Romina}{Salami Lorenzo}{Verifica per RTB}
+\addversione{1.0.0}{25/07/2023}{Salami Lorenzo}{Brotto Romina}{Versione finale	per RTB}
 
 \begin{document}
 
@@ -118,6 +122,59 @@ La metrica si basa sulla variazione percentuale rispetto alla stima iniziale.
 		Software          & $<$ 20\%                     & 0\%                       \\
 		\hline
 		Documentazione    & $<$ 20\%                     & 0\%                       \\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
+
+\section {Applicazione e valutazione delle metriche}
+I grafici sono frutto di un foglio di calcolo creato dal gruppo che applica le formule per il calcolo delle metriche definite in questo documento.
+\subsection{Valutazione d’insieme (Qualità di processo)}
+L'avanzamento del lavoro è proseguito secondo le aspettative.
+È stato riscontrato una diminuzione delle ore lavorate negli sprint 8 e 9 dovuti 
+a impegni universitari quali esami e consegne. 
+Questo calo ha particolarmente 
+influenzato il grafico dello schedule variance che è effettivamente sceso sotto la soglia di tolleranza prefissata dal gruppo. 
+Lo stesso si può riscontrare nella distanza tra il planned e l’earned value, che 
+è cresciuta particolarmente durante quegli sprint. 
+
+Il gruppo aveva tenuto in considerazione che ci sarebbe stato un calo di lavoro 
+durante gli sprint sopra indicati, prevedendo però di rientrare nei valori di tolleranza negli sprint successivi.
+
+\subsection{Planning Value, Actual Cost e Earned Value}
+\begin{center}
+	\includegraphics[scale=0.5]{AC_PV_EV.png}
+\end{center}
+\subsection{Cost Variance e Schedule Variance}
+\begin{center}
+	\includegraphics[scale=0.5]{Cost_Variance_Schedule_Variance.png}
+\end{center}
+
+\subsection{Eastimate at completition e Estimate to Complete}
+\begin{center}
+	\includegraphics[scale=0.6]{EAC_ETC.png}
+\end{center}
+\subsection{Cost Performance Index}
+\begin{center}
+	\includegraphics[scale=0.6]{CPI.png}
+\end{center}
+
+\subsection{Indice di Gulpease}
+I valori riportati sono frutto di un'analisi approssimativa, usando la libreria PyPdf2 per Python 3.
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|X|}
+		\hline
+		\textbf{Documento} & \textbf{Frasi } & \textbf{Parole } & \textbf{Caratteri } & \textbf{Indice }\\
+		\hline
+		Analisi dei requisiti &  839                   & 5642 & 34407 & 73                       \\
+		\hline
+		Piano di Progetto    & 253                     & 1317       & 7273 & 91             \\
+		\hline
+		Piano di Qualifica    & 43                     & 179       & 1128 &   98             \\
+		\hline
+		Norme di Progetto    & 423                     & 3228       & 17766 &  73              \\
+		\hline
+		Glossario    & 131                     		& 984 		& 5096 &    77            \\
 		\hline
 	\end{tabularx}\\[8pt]
 	\mbox{}\\
