--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -26,9 +26,10 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 \addversione{0.0.6}{02/06/2023}{Brotto Romina}{Soldà Matteo}{Completamento sprint 5}
 \addversione{0.0.7}{11/06/2023}{Cavaliere Erica}{Soldà Matteo}{Completamento sprint 6}
 \addversione{0.0.8}{23/06/2023}{Alberti Nicolas}{Cavaliere Erica}{Completamento sprint 7}
-\addversione{0.0.9}{02/07/2023}{Soldà Matteo}{Cavaliere Erica}{Completamento sprint 8}
-\addversione{0.0.10}{20/07/2023}{Alberti Nicolas}{Brotto Romina}{Completamento sprint 9 e 10}
-
+\addversione{0.0.9}{21/07/2023}{Soldà Matteo}{Cavaliere Erica}{Completamento sprint 8}
+\addversione{0.0.10}{21/07/2023}{Soldà Matteo}{Alberti Nicolas}{Aggiunta di specifiche relative ai rischi}
+\addversione{0.1.0}{24/07/2023}{Brotto Romina}{Soldà Matteo}{Verifica documento per RTB}
+\addversione{1.0.0}{27/07/2023}{Soldà Matteo}{Brotto Romina}{Approvazione documento per RTB}
 
 \def\pgfcalendarmonthitname#1{%
 \ifcase#1 \or Gennaio\or Febbraio\or Marzo\or Aprile\or Maggio\or Giugno\or Luglio\or Agosto\or Settembre\or Ottobre\or Novembre\or Dicembre\fi%
@@ -49,8 +50,79 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 Le tecnologie consigliate per lo svolgimento del progetto da parte del richiedente possono risultare nuove per alcuni componenti del gruppo, questo può portare difficoltà nell'utilizzo delle tecnologie, portando di conseguenza errori nel codice e ritardi di consegna. \newline
 Per prefissare le scadenze bisognerà tenere conto del tempo impiegato per imparare le nuove tecnologie, oltre al tempo di sviluppo del progetto stesso.
 
+\begin{center}
+\begin{tabularx}{\textwidth}{||c|X|X|c|c||}
+    \hline
+    \textbf{ID} & \textbf{Tipo} & \textbf{Descrizione} & \textbf{Frequenza} & \textbf{Gravità} \\
+    \hline \hline
+    RT1 & Inesperienza con linguaggi e framework & Questo rischio nasce dalla poca esperienza avuta sia con i linguaggi utilizzati e dalla esperienza nulla con i framework per l'intero team. & Alta & Medio \\
+    \hline
+    RT2 & Incompatibilità software & Questo rischio nasce dalla differenza sia hardware che software tra i computer dei vari membri del team. Come accaduto in fase di sviluppo del \textit{PoC}, alcune versioni del database non sono compatibili con processori datati. & Bassa & Alto\\
+\hline \hline
+\end{tabularx}
+\end{center}
+
 \subsection{Rischi organizzativi}
 Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi di organizzazione degli orari e quindi di non riuscire a rispettare la stima delle ore richiesta e, di conseguenza, sforare i costi indicati dal preventivo iniziale.
+
+\begin{center}
+    \begin{tabularx}{\textwidth}{||c|X|X|c|c||}
+        \hline
+        \textbf{ID} & \textbf{Tipo} & \textbf{Descrizione} & \textbf{Frequenza} & \textbf{Gravità} \\
+        \hline \hline
+        RO1 & Suddivisione del lavoro & Distribuzione non equa del lavoro dovuta all'inesperienza. & Media & Medio \\
+        \hline
+        RO2 & Impegni personali & Problemi personali legati ad un singolo membro del gruppo o che possono includere più membri del team (es: esami). & Alta & Medio \\
+        \hline
+        RO3 & Conflitti interni & Differenze nella soluzione proposta dai membri del team per la risoluzione di un problema & Bassa & Medio \\
+        \hline \hline
+    \end{tabularx}
+\end{center}
+    
+
+
+\subsection{Rischi derivanti dai Requisiti}
+Questi sono dovuti continuo mutamento dei requisti dovuti alla ricerca della soluzione che meglio si adatti alle richieste del committente e alla possibile malcomprensione dei requisiti stessi
+
+\begin{center}
+    \begin{tabularx}{\textwidth}{||c|X|X|c|c||}
+        \hline
+        \textbf{ID} & \textbf{Tipo} & \textbf{Descrizione} & \textbf{Frequenza} & \textbf{Gravità} \\
+        \hline \hline
+        RR1 & Incomprensione del requisito & Comprensione errata del requisito richiesto dal proponente. & Media & Medio \\
+        \hline
+        RR2 & Incompletezza del requisito & Il capitolato potrebbe riportare in maniera ambigua o con mancanza di precisione il requisito richiesto. & Bassa & Alto \\
+        \hline 
+        RR3 & Indisponibilità del proponente & Mancanza di tempo per il proponente per il supporto e la risoluzione di incomprensioni. & Bassa & Medio \\ 
+        \hline \hline
+    \end{tabularx}
+\end{center}
+
+\subsection{Prevenzione dei Rischi e Risoluzione dei Problemi}
+\begin{center}
+    \begin{tabularx}{\textwidth}{||c|c||X||}
+        \hline
+        \textbf{ID} & \textbf{Gravità} & \textbf{Prevenzione / Risoluzione} \\ 
+        \hline \hline
+        RT1 & Media & Il team di sviluppo si impegna a familiarizzare autonomamente con i linguaggi e con i framework prescelti prima di apportare modifiche al codice sorgente del progetto\\
+        \hline
+        RT2  & Alta & Qualora sorgesse una incompatibilità, in base al numero di membri del gruppo coinvolti, si valuterà attentamente tramite una riunione quale sia la soluzione più efficace per la risoluzione \\
+        \hline
+        RO1 & Media & Qualora venisse segnalata questo tipo di inequità, il Responsabile provvederà alla riorganizzazione del lavoro\\
+        \hline
+        RO2 & Media & Il Responsabile provvede a riorganizzare il lavoro secondo disponibilità\\
+        \hline
+        RO3 & Media & Attraverso una riunione, il gruppo discute le soluzioni proposte e dopo una valutazione critica delle soluzioni, si procede ad una votazione con la quale selezionare l'approccio favorito dalla maggior parte del team\\
+        \hline
+        RR1 & Media & Il gruppo nella sua interezza valuta il requisito per cercare una interpretazione unanime. Qualora il precedente approccio si rivelasse inconcludente, si procederà alla richiesta di un incontro con il proponente\\
+        \hline
+        RR2 & Alta & Il gruppo nella sua interezza si dedica alla valutazione del requisito. Qualora il precedente approccio si rivelasse inconcludente, si procederà alla richiesta di un incontro con il proponente\\
+        \hline
+        RR3 & Media & Attraverso una riunione con il proponente, si cercherà di trovare un punto di accordo per quanto riguarda sia le modalità di comunicazione che le tempistiche\\
+        \hline \hline
+    \end{tabularx}
+\end{center}
+    
 \newpage
 \section{Pianificazione del lavoro}
 
@@ -66,6 +138,8 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
     \item Requirements and Technology Baseline\newline
     \includegraphics[scale=0.24]{RTB_9.png}\newline
 \end{itemize}
+
+\newpage
 
 \subsection{Scrum}\label{Scrum}
 
@@ -85,25 +159,63 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
 \end{itemize}
 \includegraphics[scale=0.24]{WoW_1.png}\newline
 \newline
-\begin{tabular}{|c|c|c|c|c|c|c|c|}
-    \hline
-    \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
-    \hline
-    Erica & & & 1 & & & & 1\\
-    \hline
-    Francesco & & 1 & & & & & 1\\
-    \hline
-    Lorenzo & & & 1 & & & & 1\\
-    \hline
-    Matteo & 2 & & & & & & 2\\
-    \hline
-    Nicolas & & 1.30 & & & & & 1.30\\
-    \hline
-    Romina & & & & & & 1 & 1\\
-    \hline
-    \textbf{Totale} & 2 & 2.30 & 2 & 0 & 0 & 1 & 7.30\\
-    \hline
-\end{tabular}\\[8pt]
+
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|}
+		\hline
+		\multicolumn{4}{|c|}{\textbf{Preventivo ore/costi}}                                      \\
+		\hline
+		\hline
+		\textbf{Ruolo}  & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)} \\
+		\hline
+		Responsabile    & 30                            & 6(+6)        & 180                     \\
+		\hline
+		Amministratore  & 20                            & 4(+4)        & 80                     \\
+		\hline
+		Analista        & 25                            & 11(+11)      & 275                     \\
+		\hline
+		Progettista     & 25                            & 0(+0)        & 0                       \\
+		\hline
+		Programmatore   & 15                            & 0(+0)        & 0                       \\
+		\hline
+		Verificatore    & 15                            & 3(+3)        & 45                      \\
+		\hline
+		\hline
+		\textbf{Totale} &                               & 24           & 580                     \\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
+
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|X|X|X|}
+		\hline
+		\multicolumn{7}{|c|}{\textbf{Preventivo ore per membro}}                                      \\
+		\hline
+		\hline
+		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
+		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
+		\hline
+		Alberti Nicolas    	&0 	&2(+2)	&0	&0	&0	&0	\\
+		\hline
+		Brotto Romina    	&0 	&0	&0	&0	&0	&3(+3)	\\
+		\hline
+		Cavaliere Erica    	&0 	&0  &5(+5)  &0 &0 &0	\\
+		\hline
+		Ceccato Francesco   &0 	&2(+2)  &0  &0 &0 &0	\\
+		\hline
+		Salami Lorenzo    	&0 	&0  & 6(+6) &0 &0 &0	\\
+		\hline
+		Soldà Matteo    	&6(+6)	&0  &0  &0 &0 &0	\\
+		\hline
+		\hline
+		\textbf{Totale} 	& 6(+6) & 4(+4) & 11(+11) & 0 & 0 & 3(+3)	\\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
+
+\newpage
 
 \subsubsection{Sprint 2}
 \textbf{Data di inizio:} 28/04/2023\newline
@@ -123,25 +235,64 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
 \end{itemize}
 \includegraphics[scale=0.24]{RTB_1.png}\newline
 \newline
-\begin{tabular}{|c|c|c|c|c|c|c|c|}
-    \hline
-    \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
-    \hline
-    Erica & & & 2 & & & & 3(+2)\\
-    \hline
-    Francesco & & & 2 & & & & 3(+2)\\
-    \hline
-    Lorenzo & & & & & & 2 & 3(+2)\\
-    \hline
-    Matteo & & 3 & & & & & 5(+3)\\
-    \hline
-    Nicolas & 3 & & & & & & 4.30(+3)\\
-    \hline
-    Romina & & 2 & & & & & 3(+2)\\
-    \hline
-    \textbf{Totale} & 5(+3) & 7.30(+5) & 6(+4) & 0(+0) & 0(+0) & 3(+2) & 21.30(+14)\\
-    \hline
-\end{tabular}\\[8pt]
+
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|}
+		\hline
+		\multicolumn{4}{|c|}{\textbf{Preventivo ore/costi}}                                      \\
+		\hline
+		\hline
+		\textbf{Ruolo}  & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)} \\
+		\hline
+		Responsabile    & 30                            & 12(+6)       & 180                     \\
+		\hline
+		Amministratore  & 20                            & 9(+5)        & 100                      \\
+		\hline
+		Analista        & 25                            & 21(+10)       & 250                     \\
+		\hline
+		Progettista     & 25                            & 0(+0)        & 0                       \\
+		\hline
+		Programmatore   & 15                            & 0(+0)        & 0                       \\
+		\hline
+		Verificatore    & 15                            & 8(+5)        & 75                      \\
+		\hline
+		\hline
+		\textbf{Totale} &                               & 50           & 1185                    \\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
+
+
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|X|X|X|}
+		\hline
+		\multicolumn{7}{|c|}{\textbf{Preventivo ore per membro}}                                      \\
+		\hline
+		\hline
+		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
+		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
+		\hline
+		Alberti Nicolas    	&6(+6) 	&2	&0	&0	&0	&0	\\
+		\hline
+		Brotto Romina    	&0 	&3(+3)	&0	&0	&0	&3	\\
+		\hline
+		Cavaliere Erica    	&0 	&0  &10(+5)  &0 &0 &0	\\
+		\hline
+		Ceccato Francesco   &0 	&0  &5(+5)  &0 &0 &0	\\
+		\hline
+		Salami Lorenzo    	&0 	&0  &6 &0 &0 &5(+5)	\\
+		\hline
+		Soldà Matteo    	&6	&2(+2)  &0  &0 &0 &0	\\
+		\hline
+		\hline
+		\textbf{Totale} 	& 12(+6) & 9(+5) & 21(+10) & 0 & 0 & 8(+5)	\\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
+
+\newpage
 
 \subsubsection{Sprint 3}
 \textbf{Data di inizio:} 09/05/2023\newline
@@ -161,25 +312,63 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
 \end{itemize}
 \includegraphics[scale=0.24]{RTB_2.png}\newline
 \newline
-\begin{tabular}{|c|c|c|c|c|c|c|c|}
-    \hline
-    \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
-    \hline
-    Erica & & 2 & & & & & 5(+2)\\
-    \hline
-    Francesco & & & 2 & & & & 5(+2)\\
-    \hline
-    Lorenzo & & 2 & & & & & 5(+2)\\
-    \hline
-    Matteo & 2 & & & & & & 7(+2)\\
-    \hline
-    Nicolas & & & & & & 2 & 6.30(+2)\\
-    \hline
-    Romina & & & 2 & & & & 5(+2)\\
-    \hline
-    \textbf{Totale} & 7(+2) & 11.30(+4) & 10(+4) & 0(+0) & 0(+0) & 5(+2) & 33.30(+12)\\
-    \hline
-\end{tabular}\\[8pt]
+
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|}
+		\hline
+		\multicolumn{4}{|c|}{\textbf{Preventivo ore/costi}}                                      \\
+		\hline
+		\hline
+		\textbf{Ruolo}  & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)} \\
+		\hline
+		Responsabile    & 30                            & 18(+6)       & 180                     \\
+		\hline
+		Amministratore  & 20                            & 17(+8)       & 160                     \\
+		\hline
+		Analista        & 25                            & 35(+14)      & 350                     \\
+		\hline
+		Progettista     & 25                            & 0(+0)        & 0                       \\
+		\hline
+		Programmatore   & 15                            & 0(+0)        & 0                       \\
+		\hline
+		Verificatore    & 15                            & 12(+4)       & 60                      \\
+		\hline
+		\hline
+		\textbf{Totale} &                               & 82           & 1935                    \\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
+
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|X|X|X|}
+		\hline
+		\multicolumn{7}{|c|}{\textbf{Preventivo ore per membro}}                                      \\
+		\hline
+		\hline
+		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
+		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
+		\hline
+		Alberti Nicolas    	&6 	&2	&0	&0	&0	&4(+4)	\\
+		\hline
+		Brotto Romina    	&0 	&3	&7(+7)	&0	&0	&3	\\
+		\hline
+		Cavaliere Erica    	&0 	&4(+4)  &10  &0 &0 &0	\\
+		\hline
+		Ceccato Francesco   &0 	&0  &12(+7)  &0 &0 &0	\\
+		\hline
+		Salami Lorenzo    	&0 	&4(+4)  &6 &0 &0 &5	\\
+		\hline
+		Soldà Matteo    	&12(+6)	&2  &0  &0 &0 &0	\\
+		\hline
+		\hline
+		\textbf{Totale} 	& 18(+6) & 17(+8) & 35(+14) & 0 & 0 & 12(+4)	\\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
+
+\newpage
 
 \subsubsection{Sprint 4}
 \textbf{Data di inizio:} 17/05/2023\newline
@@ -200,25 +389,63 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
 \end{itemize}
 \includegraphics[scale=0.24]{RTB_3.png}\newline
 \newline
-\begin{tabular}{|c|c|c|c|c|c|c|c|}
-    \hline
-    \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
-    \hline
-    Erica & & 1 & & & & & 6(+1)\\
-    \hline
-    Francesco & & & & & & 1 & 6(+1)\\
-    \hline
-    Lorenzo & & 1 & & & & & 6(+1)\\
-    \hline
-    Matteo & & & 2 & & & & 9(+2)\\
-    \hline
-    Nicolas & & & 2 & & & & 8.30(+2)\\
-    \hline
-    Romina & 1 & & & & & & 6(+1)\\
-    \hline
-    \textbf{Totale} & 8(+1) & 13.30(+2) & 14(+4) & 0(+0) & 0(+0) & 6(+1) & 41.30(+8)\\
-    \hline
-\end{tabular}\\[8pt]
+
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|}
+		\hline
+		\multicolumn{4}{|c|}{\textbf{Preventivo ore/costi}}                                      \\
+		\hline
+		\hline
+		\textbf{Ruolo}  & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)} \\
+		\hline
+		Responsabile    & 30                            & 21(+3)       & 90                      \\
+		\hline
+		Amministratore  & 20                            & 21(+4)       & 80                      \\
+		\hline
+		Analista        & 25                            & 50(+15)      & 375                     \\
+		\hline
+		Progettista     & 25                            & 0(+0)        & 0                       \\
+		\hline
+		Programmatore   & 15                            & 0(+0)        & 0                       \\
+		\hline
+		Verificatore    & 15                            & 17(+5)       & 75                      \\
+		\hline
+		\hline
+		\textbf{Totale} &                               & 109          & 2555                    \\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
+
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|X|X|X|}
+		\hline
+		\multicolumn{7}{|c|}{\textbf{Preventivo ore per membro}}                                      \\
+		\hline
+		\hline
+		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
+		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
+		\hline
+		Alberti Nicolas    	&6 	&2	&7(+7)	&0	&0	&4	\\
+		\hline
+		Brotto Romina    	&3(+3) 	&3	&7	&0	&0	&3	\\
+		\hline
+		Cavaliere Erica    	&0 	&6(+2)  &10  &0 &0 &0	\\
+		\hline
+		Ceccato Francesco   &0 	&0  &12  &0 &0 &5(+5)	\\
+		\hline
+		Salami Lorenzo    	&0 	&6(+2)  &6 &0 &0 &5	\\
+		\hline
+		Soldà Matteo    	&12	&2  &8(+8)  &0 &0 &0	\\
+		\hline
+		\hline
+		\textbf{Totale} 	& 21(+3) & 21(+4) & 50(+15) & 0 & 0 & 17(+5)	\\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
+
+\newpage
 
 \subsubsection{Sprint 5}
 \textbf{Data di inizio:} 26/05/2023\newline
@@ -237,25 +464,63 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
 \end{itemize}
 \includegraphics[scale=0.24]{RTB_4.png}\newline
 \newline
-\begin{tabular}{|c|c|c|c|c|c|c|c|}
-    \hline
-    \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
-    \hline
-    Erica & 1 & & 2 & & & & 9(+3)\\
-    \hline
-    Francesco & & & & & & 1 & 7(+1)\\
-    \hline
-    Lorenzo & & & & & & 1 & 7(+1)\\
-    \hline
-    Matteo & & & & & 2 & & 11(+2)\\
-    \hline
-    Nicolas & & & & & 2 & & 10.30(+2)\\
-    \hline
-    Romina & & & 2 & & & & 8(+2)\\
-    \hline
-    \textbf{Totale} & 9(+1) & 13.30(+0) & 18(+4) & 0(+0) & 4(+4) & 8(+2) & 52.30(+11)\\
-    \hline
-\end{tabular}\\[8pt]
+
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|}
+		\hline
+		\multicolumn{4}{|c|}{\textbf{Preventivo ore/costi}}                                      \\
+		\hline
+		\hline
+		\textbf{Ruolo}  & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)} \\
+		\hline
+		Responsabile    & 30                            & 24(+3)       & 90                      \\
+		\hline
+		Amministratore  & 20                            & 23(+2)       & 40                      \\
+		\hline
+		Analista        & 25                            & 55(+5)       & 125                     \\
+		\hline
+		Progettista     & 25                            & 2(+2)        & 50                     \\
+		\hline
+		Programmatore   & 15                            & 1(+1)        & 15                       \\
+		\hline
+		Verificatore    & 15                            & 23(+6)       & 90                      \\
+		\hline
+		\hline
+		\textbf{Totale} &                               & 128          & 2965                    \\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
+
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|X|X|X|}
+		\hline
+		\multicolumn{7}{|c|}{\textbf{Preventivo ore per membro}}                                      \\
+		\hline
+		\hline
+		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
+		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
+		\hline
+		Alberti Nicolas    	&6 	&4(+2)	&7	&0	&0	&4	\\
+		\hline
+		Brotto Romina    	&3 	&3	&12(+5)	&0	&0	&3	\\
+		\hline
+		Cavaliere Erica    	&3(+3) 	&6  &10  &0 &0 &0	\\
+		\hline
+		Ceccato Francesco   &0 	&0  &12  &2(+2) &0 &5	\\
+		\hline
+		Salami Lorenzo    	&0 	&6  &6 &0 &0 &11(+6)	\\
+		\hline
+		Soldà Matteo    	&12	&2  &8 &0 &1(+1) &0	\\
+		\hline
+		\hline
+		\textbf{Totale} 	&24(+3) &23(+2) &55(+5) &2(+2) &1(+1) &23(+6)	\\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
+
+\newpage
 
 \subsubsection{Sprint 6}
 \textbf{Data di inizio:} 03/06/2023\newline
@@ -273,25 +538,63 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
 \end{itemize}
 \includegraphics[scale=0.24]{RTB_5.png}\newline
 \newline
-\begin{tabular}{|c|c|c|c|c|c|c|c|}
-    \hline
-    \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
-    \hline
-    Erica & & & & & & 2 & 11(+2)\\
-    \hline
-    Francesco & & & 2 & & & & 9(+2)\\
-    \hline
-    Lorenzo & & & 2 & & & & 9(+2)\\
-    \hline
-    Matteo & & & & & 3 & & 14(+3)\\
-    \hline
-    Nicolas & & 0.30 & & & 2 & & 13(+2.30)\\
-    \hline
-    Romina & 2 & & & & & & 10(+2)\\
-    \hline
-    \textbf{Totale} & 11(+2) & 14(+0.30) & 22(+4) & 0(+0) & 10(+6) & 11(+2) & 66(+13.30)\\
-    \hline
-\end{tabular}\\[8pt]
+
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|}
+		\hline
+		\multicolumn{4}{|c|}{\textbf{Preventivo ore/costi}}                                      \\
+		\hline
+		\hline
+		\textbf{Ruolo}  & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)} \\
+		\hline
+		Responsabile    & 30                            & 26(+2)       & 60                      \\
+		\hline
+		Amministratore  & 20                            & 24(+1)       & 20                       \\
+		\hline
+		Analista        & 25                            & 56(+1)       & 25                       \\
+		\hline
+		Progettista     & 25                            & 7(+5)       & 125                     \\
+		\hline
+		Programmatore   & 15                            & 16(+15)      & 225                     \\
+		\hline
+		Verificatore    & 15                            & 27(+4)       & 60                      \\
+		\hline
+		\hline
+		\textbf{Totale} &                               & 156          & 3480                    \\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
+
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|X|X|X|}
+		\hline
+		\multicolumn{7}{|c|}{\textbf{Preventivo ore per membro}}                                      \\
+		\hline
+		\hline
+		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
+		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
+		\hline
+		Alberti Nicolas    	&8(+2) 	&4	&7	&0	&0	&4	\\
+		\hline
+		Brotto Romina    	&3 	&4(+1)	&12	&0	&0	&3	\\
+		\hline
+		Cavaliere Erica    	&3 	&6  &10  &0 &0 &4(+4)	\\
+		\hline
+		Ceccato Francesco   &0 	&0  &12  &7(+5) &0 &5	\\
+		\hline
+		Salami Lorenzo    	&0 	&6  &7(+1) &0 &0 &11	\\
+		\hline
+		Soldà Matteo    	&12	&2  &8 &0 &16(+15) &0	\\
+		\hline
+		\hline
+		\textbf{Totale} 	&26(+2) &24(+1) &56(+1) &7(+5) &16(+15) &27(+4)	\\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
+
+\newpage
 
 \subsubsection{Sprint 7}
 \textbf{Data di inizio:} 13/06/2023\newline
@@ -308,25 +611,64 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
 \end{itemize}
 \includegraphics[scale=0.24]{RTB_6.png}\newline
 \newline
-\begin{tabular}{|c|c|c|c|c|c|c|c|}
-    \hline
-    \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
-    \hline
-    Erica & & & & & 2 & & 13(+2)\\
-    \hline
-    Francesco & & & & 2 & & & 11(+2)\\
-    \hline
-    Lorenzo & 1 & & & & & & 10(+1)\\
-    \hline
-    Matteo & & & & 1 & & & 15(+1)\\
-    \hline
-    Nicolas & & & 2 & & & & 15(+2)\\
-    \hline
-    Romina & & 1 & & & & & 11(+1)\\
-    \hline
-    \textbf{Totale} & 12(+1) & 15(+1) & 24(+2) & 3(+3) & 12(+2) & 11(+0) & 75(+9)\\
-    \hline
-\end{tabular}\\[8pt]
+
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|}
+		\hline
+		\multicolumn{4}{|c|}{\textbf{Preventivo ore/costi}}                                      \\
+		\hline
+		\hline
+		\textbf{Ruolo}  & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)} \\
+		\hline
+		Responsabile    & 30                            & 29(+3)       & 90                      \\
+		\hline
+		Amministratore  & 20                            & 26(+2)       & 40                       \\
+		\hline
+		Analista        & 25                            & 57(+1)       & 25                       \\
+		\hline
+		Progettista     & 25                            & 11(+4)       & 100                     \\
+		\hline
+		Programmatore   & 15                            & 26(+10)       & 150                     \\
+		\hline
+		Verificatore    & 15                            & 31(+4)       & 60                      \\
+		\hline
+		\hline
+		\textbf{Totale} &                               & 180         & 3945                   \\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
+
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|X|X|X|}
+		\hline
+		\multicolumn{7}{|c|}{\textbf{Preventivo ore per membro}}                                      \\
+		\hline
+		\hline
+		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
+		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
+		\hline
+		Alberti Nicolas    	&8 	&4	&7	&4(+4)	&0	&4	\\
+		\hline
+		Brotto Romina    	&3 	&6(+2)	&12	&0	&0	&3	\\
+		\hline
+		Cavaliere Erica    	&3 	&6  &10  &0 &10(+10) &4	\\
+		\hline
+		Ceccato Francesco   &0 	&0  &12  &7 &0 &9(+4)	\\
+		\hline
+		Salami Lorenzo    	&3(+3) 	&6  &7 &0 &0 &11	\\
+		\hline
+		Soldà Matteo    	&12	&2  &9(+1) &0 &16 &0	\\
+		\hline
+		\hline
+		\textbf{Totale} 	&29(+3) &26(+2) &57(+1) &11(+4) &26(+10) &31(+4)	\\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
+
+\newpage
+
 
 \subsubsection{Sprint 8}
 \textbf{Data di inizio:} 19/06/2023\newline
@@ -348,25 +690,63 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
 \end{itemize}
 \includegraphics[scale=0.24]{RTB_7.png}\newline
 \newline
-\begin{tabular}{|c|c|c|c|c|c|c|c|}
-    \hline
-    \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
-    \hline
-    Erica & & & & 0.5 & & & 13.5(+0.5)\\
-    \hline
-    Francesco & & & & 0.5 & & & 11.5(+0.5)\\
-    \hline
-    Lorenzo & 1 & & & & & & 11(+1)\\
-    \hline
-    Matteo & & & & & & 1 & 16(+1)\\
-    \hline
-    Nicolas & & & & & 2 & & 17(+2)\\
-    \hline
-    Romina & & 1 & & & & & 12(+1)\\
-    \hline
-    \textbf{Totale} & 13(+1) & 16(+1) & 24(+0) & 4(+1) & 14(+2) & 12(+1) & 81(+6)\\
-    \hline
-\end{tabular}\\[8pt]
+
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|}
+		\hline
+		\multicolumn{4}{|c|}{\textbf{Preventivo ore/costi}}                                      \\
+		\hline
+		\hline
+		\textbf{Ruolo}  & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)} \\
+		\hline
+		Responsabile    & 30                            & 30(+1)       & 30                     \\
+		\hline
+		Amministratore  & 20                            & 28(+2)       & 40                      \\
+		\hline
+		Analista        & 25                            & 59(+2)       & 50                       \\
+		\hline
+		Progettista     & 25                            & 18(+7)       & 175                      \\
+		\hline
+		Programmatore   & 15                            & 36(+10)       & 150                      \\
+		\hline
+		Verificatore    & 15                            & 36(+5)       & 75                      \\
+		\hline
+		\hline
+		\textbf{Totale} &                               & 207          & 4465                   \\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
+
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|X|X|X|}
+		\hline
+		\multicolumn{7}{|c|}{\textbf{Preventivo ore per membro}}                                      \\
+		\hline
+		\hline
+		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
+		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
+		\hline
+		Alberti Nicolas    	&8 	&4	&7	&4	&10(+10) &4	\\
+		\hline
+		Brotto Romina    	&3 	&8(+2)	&12	&0	&0	&3	\\
+		\hline
+		Cavaliere Erica    	&3 	&6  &10  &7(+7) &10 &4	\\
+		\hline
+		Ceccato Francesco   &0 	&0  &14(+2) &7 &0 &9	\\
+		\hline
+		Salami Lorenzo    	&4(+1) 	&6  &7 &0 &0 &11	\\
+		\hline
+		Soldà Matteo    	&12	&2  &9 &0 &16 &5(+5)	\\
+		\hline
+		\hline
+		\textbf{Totale} 	&30(+1) &28(+2) &59(+2) &18(+7) &36(+10) &36(+5)	\\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
+
+\newpage
 
 \subsubsection{Sprint 9}
 \textbf{Data di inizio:} 04/07/2023\newline
@@ -387,25 +767,62 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
 \end{itemize}
 \includegraphics[scale=0.176]{RTB_8.png}\newline
 \newline
-\begin{tabular}{|c|c|c|c|c|c|c|c|}
-    \hline
-    \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
-    \hline
-    Erica & & 1 & & & & & 14.5(+1)\\
-    \hline
-    Francesco & & & & & 2 & & 13.5(+2)\\
-    \hline
-    Lorenzo & & & & & 2 & & 13(+2)\\
-    \hline
-    Matteo & & & & 1.5 & & & 17.5(+1.5)\\
-    \hline
-    Nicolas & 1 & & & & & & 18(+1)\\
-    \hline
-    Romina & & & 1 & & & & 13(+1)\\
-    \hline
-    \textbf{Totale} & 14(+1) & 17(+1) & 25(+1) & 5.5(+1.5) & 18(+4) & 12(+0) & 89.5(+8.5)\\
-    \hline
-\end{tabular}\\[8pt]
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|}
+		\hline
+		\multicolumn{4}{|c|}{\textbf{Preventivo ore/costi}}                                      \\
+		\hline
+		\hline
+		\textbf{Ruolo}  & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)} \\
+		\hline
+		Responsabile    & 30                            & 31(+1)       & 30                      \\
+		\hline
+		Amministratore  & 20                            & 30(+2)       & 40                      \\
+		\hline
+		Analista        & 25                            & 61(+2)       & 50                       \\
+		\hline
+		Progettista     & 25                            & 25(+7)       & 175                      \\
+		\hline
+		Programmatore   & 15                            & 46(+10)       & 150                      \\
+		\hline
+		Verificatore    & 15                            & 41(+5)       & 75                      \\
+		\hline
+		\hline
+		\textbf{Totale} &                               & 234          & 4985                    \\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
+
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|X|X|X|}
+		\hline
+		\multicolumn{7}{|c|}{\textbf{Preventivo ore per membro}}                                      \\
+		\hline
+		\hline
+		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
+		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
+		\hline
+		Alberti Nicolas    	&8 	&4	&9(+2)	&4	&10 &4	\\
+		\hline
+		Brotto Romina    	&3 	&8	&12	&0	&0	&8(+5)	\\
+		\hline
+		Cavaliere Erica    	&3 	&8(+2)  &10  &7 &10 &4	\\
+		\hline
+		Ceccato Francesco   &1(+1) 	&0  &14 &7 &0 &9	\\
+		\hline
+		Salami Lorenzo    	&4 	&6  &7 &0 &10(+10) &11	\\
+		\hline
+		Soldà Matteo    	&12	&2  &9 &7(+7) &16 &5	\\
+		\hline
+		\hline
+		\textbf{Totale} 	&31(+1) &30(+2) &61(+2) &25(+7) &46(+10) &41(+5)	\\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
+
+\newpage
 
 \subsubsection{Sprint 10}
 \textbf{Data di inizio:} 12/07/2023\newline
@@ -427,25 +844,60 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
 \end{itemize}
 \includegraphics[scale=0.178]{RTB_9.png}\newline
 \newline
-\begin{tabular}{|c|c|c|c|c|c|c|c|}
-    \hline
-    \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
-    \hline
-    Erica & & & & & & 1 & 14.5(+1)\\
-    \hline
-    Francesco & & & & & 1 & & 12.5(+1)\\
-    \hline
-    Lorenzo & & & & 3 & & & 14(+3)\\
-    \hline
-    Matteo & 1 & & & & & & 17(+1)\\
-    \hline
-    Nicolas & & 1 & & & & & 18(+1)\\
-    \hline
-    Romina & & & & & 2 & & 14(+2)\\
-    \hline
-    \textbf{Totale} & 14(+1) & 17(+1) & 24(+0) & 7(+3) & 17(+3) & 13(+1) & 98.5(+9)\\
-    \hline
-\end{tabular}\\[8pt]
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|}
+		\hline
+		\multicolumn{4}{|c|}{\textbf{Preventivo ore/costi}}                                      \\
+		\hline
+		\hline
+		\textbf{Ruolo}  & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)} \\
+		\hline
+		Responsabile    & 30                            & 32(+1)       & 30                     \\
+		\hline
+		Amministratore  & 20                            & 32(+2)       & 40                      \\
+		\hline
+		Analista        & 25                            & 62(+1)       & 25                       \\
+		\hline
+		Progettista     & 25                            & 31(+6)       & 150                      \\
+		\hline
+		Programmatore   & 15                            & 56(+10)       & 150                      \\
+		\hline
+		Verificatore    & 15                            & 46(+5)       & 75                      \\
+		\hline
+		\hline
+		\textbf{Totale} &                               & 259          & 5455                    \\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
+
+\begin{center}
+	\begin{tabularx}{\textwidth}{|X|X|X|X|X|X|X|}
+		\hline
+		\multicolumn{7}{|c|}{\textbf{Preventivo ore per membro}}                                      \\
+		\hline
+		\hline
+		\textbf{Membro}  & \textbf{Resp.} & \textbf{Amm.} & \textbf{Ana.} &
+		\textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} \\
+		\hline
+		Alberti Nicolas    	&8 	&4	&10(+1)	&4	&10 &4	\\
+		\hline
+		Brotto Romina    	&3 	&8	&12	&0	&10(+10) &8	\\
+		\hline
+		Cavaliere Erica    	&3 	&8  &10  &7 &10 &9(+5)	\\
+		\hline
+		Ceccato Francesco   &1 	&2(+2)  &14 &7 &0 &9	\\
+		\hline
+		Salami Lorenzo    	&4 	&6  &7 &6(+6) &10 &11	\\
+		\hline
+		Soldà Matteo    	&13(+1)	&2  &9 &7 &16 &5	\\
+		\hline
+		\hline
+		\textbf{Totale} 	&32(+1) &32(+2) &62(+1) &31(+6) &56(+10) &46(+5)	\\
+		\hline
+	\end{tabularx}\\[8pt]
+	\mbox{}\\
+\end{center}
 
 \newpage
 
