Fix redattori scomparsi

--- a/docs/interni/verbali/2023_03_16_I/2023_03_16_I.tex
+++ b/docs/interni/verbali/2023_03_16_I/2023_03_16_I.tex
@@ -7,7 +7,7 @@
 
 \settitolo{Verbale del 16/03/2023}
 \setredattori{Soldà Matteo}
-\setrevisori{}
+\setrevisori{Cavaliere Erica}
 \setdestuso{interno}
 \setdescrizione{
     Verbale dell'incontro del 16/03/2023
