--- a/docs/interni/verbali/2023_03_23_I/2023_03_23_I.tex
+++ b/docs/interni/verbali/2023_03_23_I/2023_03_23_I.tex
@@ -7,7 +7,7 @@
 
 \settitolo{Verbale del 23/03/2023}
 \setredattori{Soldà Matteo}
-\setrevisori{}
+\setrevisori{Alberti Nicolas}
 \setdestuso{interno}
 \setdescrizione{
     Verbale dell'incontro del 23/03/2023
