--- a/docs/interni/verbali/2023_03_24_I/2023_03_24_I.tex
+++ b/docs/interni/verbali/2023_03_24_I/2023_03_24_I.tex
@@ -7,7 +7,7 @@
 
 \settitolo{Verbale del 24/03/2023}
 \setredattori{Soldà Matteo}
-\setrevisori{}
+\setrevisori{Brotto Romina}
 \setdestuso{interno}
 \setdescrizione{
     Verbale dell'incontro del 24/03/2023
