--- a/docs/interni/verbali/2023_03_31_I/2023_03_31_I.tex
+++ b/docs/interni/verbali/2023_03_31_I/2023_03_31_I.tex
@@ -7,7 +7,7 @@
 
 \settitolo{Verbale del 31/03/2023}
 \setredattori{Soldà Matteo}
-\setrevisori{}
+\setrevisori{Salami Lorenzo}
 \setdestuso{interno}
 \setdescrizione{
     Verbale dell'incontro del 31/03/2023
