Aggiunto secondo destinatario

--- a/docs/esterni/presentazioneRTB/lettera_presentazione_RTB.tex
+++ b/docs/esterni/presentazioneRTB/lettera_presentazione_RTB.tex
@@ -21,7 +21,10 @@
 \end{center}
 
 
-Gentile Prof. Vardanega,\\\\
+Gentile Prof. Vardanega,
+
+
+Gentile Prof. Cardin,\\\\
 con la presente, il gruppo 4ourSquared desidera candidarsi in via ufficiale per la fase di \textit{RTB} del progetto \textit{Lumos Minima}.\\\\
 Accedendo a questo \href{https://github.com/4ourSquared/LumosMinima/tree/main/public}{link} (che effettuerà un \textit{redirect} su \href{https://github.com/}{GitHub}), saranno visionabili i seguenti nuovi documenti:
 \paragraph{Documenti Esterni}
