--- a/docs/esterni/verbali/2023_08_02_E/2023_08_02_E.tex
+++ b/docs/esterni/verbali/2023_08_02_E/2023_08_02_E.tex
@@ -7,7 +7,7 @@
 
 \settitolo{Verbale del 02/08/2023 con Imola Informatica}
 \setredattori{Brotto Romina}
-\setrevisori{Cavaliere Erica}
+\setrevisori{Salami Lorenzo}
 \setdestuso{esterno}
 \setdescrizione{
     Verbale dell'incontro del 02/08/2023 con Imola Informatica
