corretti typo e aggiunto revisore

--- a/docs/interni/verbali/2023_08_07_I/2023_08_07_I.tex
+++ b/docs/interni/verbali/2023_08_07_I/2023_08_07_I.tex
@@ -39,15 +39,15 @@
 \end{itemize}
 
 \section*{Conclusioni}
-Durante la riunione, il gruppo ha sistemato la documentazione in vista dell'incontro per la seconda fase della \textit{RTB} con il professore Vardanega, inviandogli anche la mail di candidatura.\newline
-Sono state anche svolte alcuni unit test si alcune parti del codice.
+Durante la riunione, il gruppo ha sistemato la documentazione in vista dell'incontro per la seconda fase della \textit{RTB} con il professor Vardanega, inviandogli anche la mail di candidatura.\newline
+Sono stati anche svolti alcuni unit test di alcune parti del codice.
 
 \section*{Impegni Assunti}
 
 Per quanto riguarda la documentazione nella repository LumosMinima:
 \begin{itemize}
     \item Erica e Romina aggiornano l'\textit{Analisi dei requisiti};
-    \item Lorenzo aggiorna il \textit{Piano di qualifica}.
+    \item Lorenzo aggiorna il \textit{Piano di Progetto}.
 \end{itemize}
 
 Per il codice presente nella repository LumosMinima-code:
