--- a/docs/interni/verbali/2023_08_07_I/2023_08_07_I.tex
+++ b/docs/interni/verbali/2023_08_07_I/2023_08_07_I.tex
@@ -46,14 +46,13 @@ Sono stati anche svolti alcuni unit test di alcune parti del codice.
 
 Per quanto riguarda la documentazione nella repository LumosMinima:
 \begin{itemize}
-    \item Erica e Romina aggiornano l'\textit{Analisi dei requisiti};
-    \item Lorenzo aggiorna il \textit{Piano di Progetto}.
+    \item Erica e Romina aggiornano l'\textit{Analisi dei requisiti} e il \textit{Piano di Progetto};
 \end{itemize}
 
 Per il codice presente nella repository LumosMinima-code:
 \begin{itemize}
     \item Nicolas e Matteo implementano le actions;
-    \item Francesco si occupa di svolgere una o più unit test del codice;
+    \item Francesco e Lorenzo si occupano di svolgere uno o più unit test del codice;
 \end{itemize}
 
 \end{document}
